--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "ally.js": "^1.4.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "ally.js": "^1.4.1",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "chalk": "^4.1.0",
@@ -24,6 +27,7 @@
     "core-js": "^3.6.5",
     "deepmerge": "^4.2.2",
     "del": "^5.1.0",
+    "fibers": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.2.0",
@@ -36,8 +40,15 @@
     "gulp-plumber": "^1.2.1",
     "gulp-pretty-html": "^2.0.10",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-twig": "^1.2.0",
     "import-fresh": "^3.2.1",
+    "is-plain-object": "^5.0.0",
+    "js-yaml": "^3.14.1",
     "less-plugin-lists": "^1.1.2",
-    "webpack": "^4.41.6"
+    "sass": "^1.29.0",
+    "webpack": "^5.5.1",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
