--- a/_data/site.yaml
+++ b/_data/site.yaml
@@ -1,6 +1,7 @@
 title: Homeless and Housing Resource Center (HHRC)
 meta: 
   description: Providing high-quality, no-cost training for health and housing professionals in evidenced-based practices that contribute to housing stability, recovery, and an end to homelessness.
+highlight: We’re excited to bring you cutting-edge training related to housing and homelessness beginning in December 2020.
 partners:
   - name: Partner Name
     link: http://www.google.com
