--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "ally.js": "^1.4.1"
+    "ally.js": "^1.4.1",
+    "aria-tablist": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
