Rename webinar zips to avoid confusion

--- a/_data/webinars.yaml
+++ b/_data/webinars.yaml
@@ -8,8 +8,8 @@
     - Larry McDonough, Attorney at Law and Adjunct Professor of Law, Senior Minnesota Counsel, National Anti-Eviction Project, Lawyers' Committee for Civil Rights Under Law
     - Randy McCoy, Executive Director of Metro Area Continuum of Care for the Homeless (MACCH), Omaha, Nebraska
   resources:
-    filename: hhrc-webinar.zip
-    prettyname: HHRC Webinar.zip
+    filename: hhrc-webinar-december-2020.zip
+    prettyname: HHRC Webinar (December 2020).zip
   link: https://youtu.be/uZ0K4pLVFWo
 # Note: Body is markdown
 - title: Supporting the Mental Health and Treatment Needs of Individuals Experiencing Homelessness During COVID-19
@@ -23,6 +23,6 @@
     - Eowyn Rieke, MD, MPH, Blackburn Medical Director, in conversation with Walter Bailey, Peer Counselor at the Imani Center, Central City Concern, Portland, Oregon
     - Laura Leone, DSW, MSSW, LMSW, Integrated Health Consultant, National Council for Behavioral Health
   resources:
-    filename: hhrc-march-2021.zip
-    prettyname: HHRC Webinar 2021.zip
+    filename: hhrc-webinar-march-2021.zip
+    prettyname: HHRC Webinar (March 2020).zip
   link: https://youtu.be/mTEqnHFsMvU
