Move upcoming webinar into webinar archive list

--- a/_data/webinars.yaml
+++ b/_data/webinars.yaml
@@ -1,4 +1,18 @@
 # Note: Body is markdown
+- title: "Taking a Trauma-Informed Approach with Events of Escalation"
+  description:  Among individuals experiencing homelessness, there is a high prevalence of complex trauma, chronic health conditions, and serious mental illness. Trauma, compounded with acute health conditions, often impacts an individual’s ability to manage their distress. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore using trauma-informed, compassionate, and respectful de-escalation techniques when aiding participants and staff during and after events of escalation.
+  body: | 
+    Among individuals experiencing homelessness, there is a high prevalence of complex trauma, chronic health conditions, and serious mental illness. Trauma, compounded with acute health conditions, often impacts an individual’s ability to manage their distress. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore using trauma-informed, compassionate, and respectful de-escalation techniques when aiding participants and staff during and after events of escalation.
+  speakers: |
+    - Panel discussion with peers and persons with lived expertise
+    - Laura Leone, DSW, MSSW, LMSW, Consultant, National Council for Mental Wellbeing
+    - Mari Aceves, ED.D, DSW, BCBA, Consultant, National Council for Mental Wellbeing
+  resources:
+    filename: july-2021-webinar-materials.zip
+    prettyname: HHRC Webinar Materials (July 2021).zip
+  link: https://youtu.be/6ykQXTNc1uI
+
+
 - title: "Street Medicine for Unsheltered Individuals: Serving People Where They Are"
   description:  According to HUD’s Annual Homeless Assessment Report (AHAR), over 225,000 people experienced unsheltered homelessness on a single night in 2020. Of those individuals, twenty-five percent self-reported having a serious mental illness or chronic substance use condition. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore the benefits of incorporating mobile psychiatry with street outreach.
   body: | 
